# food-delivery

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_project.sh
flaskr/: main.py  publish.py
postman collection/: food_delivery.postman_collection.json
src/: consumer.py  id_creator.py
test/: test_id_creator.py  test_main.py  test_publish.py
