[tool.poetry]
name = "food-delivery"
version = "0.1.0"
description = ""
authors = ["ANUSHMA VIBHU <anushmavian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pika = "^1.2.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
